--- a/src/main/resources/templates/Country.html
+++ b/src/main/resources/templates/Country.html
@@ -306,84 +306,97 @@
     <!--header end-->
 
     <!--sidebar start-->
-    <aside>
-      <div id="sidebar" class="nav-collapse ">
-        <!-- sidebar menu start-->
-        <ul class="sidebar-menu">
-          <li class="">
-            <a class="" href="index.html">
+      <aside>
+          <div id="sidebar" class="nav-collapse ">
+              <!-- sidebar menu start-->
+              <ul class="sidebar-menu">
+                  <li class="active">
+                      <a class="" th:href="@{/index}">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
-          </li>
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
+                  </li>
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
                           <i class="icon_document_alt"></i>
-                          <span>Forms</span>
+                          <span>Vehicles</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
-            <ul class="sub">
-              <li><a class="" href="form_component.html">Form Elements</a></li>
-              <li><a class="" href="form_validation.html">Form Validation</a></li>
-            </ul>
-          </li>
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/vehicles}">Vehicle Data</a></li>
+                          <li><a class="" th:href="@{/vehiclemaintenances}">Maintenance</a></li>
+                          <li><a class="" th:href="@{/vehiclemovements}">Movements</a></li>
+                          <li><a class="" th:href="@{/vehiclehires}">Hires</a></li>
+                      </ul>
+                  </li>
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
                           <i class="icon_desktop"></i>
-                          <span>UI Fitures</span>
+                          <span>Parameters</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
-            <ul class="sub">
-              <li><a class="" href="general.html">Components</a></li>
-              <li><a class="" href="buttons.html">Buttons</a></li>
-              <li><a class="" href="grids.html">Grids</a></li>
-            </ul>
-          </li>
-          <li>
-            <a class="" href="widgets.html">
-                          <i class="icon_genius"></i>
-                          <span>Widgets</span>
-                      </a>
-          </li>
-          <li>
-            <a class="" href="chart-chartjs.html">
-                          <i class="icon_piechart"></i>
-                          <span>Charts</span>
-
-                      </a>
-
-          </li>
-
-          <li class="sub-menu">
-            <a href="javascript:;" class="">
-                          <i class="icon_table"></i>
-                          <span>Tables</span>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/vehiclemakes}">Vehicle Make</a></li>
+                          <li><a class="" th:href="@{/vehicletypes}">Vehicle Types</a></li>
+                          <li><a class="" th:href="@{/vehiclemodels}">Vehicle Models</a></li>
+                          <li><a class="" th:href="@{/vehiclestatuses}">Status Values</a></li>
+                      </ul>
+                  </li>
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
+                          <i class="icon_desktop"></i>
+                          <span>People</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
-            <ul class="sub">
-              <li><a class="" href="basic_table.html">Basic Table</a></li>
-            </ul>
-          </li>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/employees}">Employees</a></li>
+                          <li><a class="" th:href="@{/clients}">Clients</a></li>
+                          <li><a class="" th:href="@{/suppliers}">Suppliers</a></li>
+                          <li><a class="" th:href="@{/contacts}">Contacts</a></li>
+                          <li><a class="" th:href="@{/users}">Users</a></li>
+                      </ul>
+                  </li>
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
+                          <i class="icon_desktop"></i>
+                          <span>HR Settings</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/jobtitles}">Job Titles</a></li>
+                          <li><a class="" th:href="@{/employeetypes}">Employee Types</a></li>
+                      </ul>
+                  </li>
 
-          <li class="sub-menu ">
-            <a href="javascript:;" class="">
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
+                          <i class="icon_desktop"></i>
+                          <span>Accounts</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/invoices}">Invoices</a></li>
+                          <li><a class="" th:href="@{/invoicestatuses}">Invoice Status Values</a></li>
+                      </ul>
+                  </li>
+
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
                           <i class="icon_documents_alt"></i>
-                          <span>Pages</span>
+                          <span>Globals</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
-            <ul class="sub">
-              <li><a class="" href="profile.html">Profile</a></li>
-              <li><a class="" href="login.html"><span>Login Page</span></a></li>
-              <li><a class="" href="contact.html"><span>Contact Page</span></a></li>
-              <li><a class="active" href="blank.html">Blank Page</a></li>
-              <li><a class="" href="404.html">404 Error</a></li>
-            </ul>
-          </li>
+                      <ul class="sub">
+                          <li><a class="" th:href="@{/countries}">Countries</a></li>
+                          <li><a class="" th:href="@{/states}"><span>States</span></a></li>
+                          <li><a class="" th:href="@{/locations}"><span>Locations</span></a></li>
+                      </ul>
+                  </li>
 
-        </ul>
-        <!-- sidebar menu end-->
-      </div>
-    </aside>
+              </ul>
+              <!-- sidebar menu end-->
+          </div>
+      </aside>
     <!--sidebar end-->
 
     <!--main content start-->
@@ -420,7 +433,15 @@
                           <td th:text="${country.code}"></td>
                           <td>
                               <div class="btn-group">
-                                  <a th:href="@{/countries/findById/(id=${country.id})}" class="btn btn-primary" id="editButton">Edit</a>
+                                  <a th:href="@{/countries/findById/(id=${country.id})}" class="btn btn-primary" id="editButton">
+                                      <i class="icon_pencil-edit"></i>
+                                  </a>
+                                  <a class="btn btn-success" id="detailsButton">
+                                      <i class="icon_document_alt"></i>
+                                  </a>
+                                  <a th:href="@{/countries/delete/(id=${country.id})}" class="btn btn-danger" id="deleteButton">
+                                      <i class="icon_close_alt2"></i>
+                                  </a>
                               </div>
 
                           </td>
@@ -503,7 +524,7 @@
                   <form th:action="@{/countries/update}" method="put">
 
                       <div class="form-group">
-                          <label for="recipient-desc" class="col-form-label">Description:</label>
+                          <label for="recipient-desc" class="col-form-label">Id:</label>
                           <input type="text" class="form-control" id="editId" name="id" readonly>
                       </div>
                       <div class="form-group">
@@ -533,6 +554,26 @@
               </div>
               <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <div class="modal" id="deleteModal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Confirm Delete</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <p>Are you sure you want to delete this record?</p>
+              </div>
+              <div class="modal-footer">
+                  <a id="confirmDeleteButton" class="btn btn-primary" href="">Yes, Delete</a>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
               </div>
           </div>
       </div>
