--- a/src/main/resources/templates/State.html
+++ b/src/main/resources/templates/State.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Vehicle Status Management Page</title>
+  <title>State Management Page</title>
 
   <!-- Bootstrap CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -413,7 +413,44 @@
           </div>
         </div>
         <!-- page start-->
-        <h1>List of Vehicle Statuses</h1>
+          <div class="row">
+              <div class="col-lg-12">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" data-whatever="@mdo">New Country</button>
+                  <table class="table">
+                      <thead>
+                      <tr>
+                          <th>id</th>
+                          <th>Name</th>
+                          <th>Details</th>
+                          <th>Actions</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr th:each="state:${states}">
+                          <td th:text="${state.id}"></td>
+                          <td th:text="${state.name}"></td>
+                          <td th:text="${state.capital}"></td>
+                          <td th:text="${state.code}"></td>
+                          <td>
+                              <div class="btn-group">
+                                  <a th:href="@{/states/findById/(id=${state.id})}" class="btn btn-primary" id="editButton">
+                                      <i class="icon_pencil-edit"></i>
+                                  </a>
+                                  <a class="btn btn-success" id="detailsButton" th:href="@{/states/findById/(id=${state.id})}">
+                                      <i class="icon_document_alt"></i>
+                                  </a>
+                                  <a th:href="@{/states/delete/(id=${state.id})}" class="btn btn-danger" id="deleteButton">
+                                      <i class="icon_close_alt2"></i>
+                                  </a>
+                              </div>
+
+                          </td>
+                      </tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+
         <!-- page end-->
       </section>
     </section>
@@ -431,6 +468,207 @@
     </div>
   </section>
   <!-- container section end -->
+  <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <form th:action="@{/states/addNew}" method="post">
+          <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">New State Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idAdd" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idAdd" name="id" disabled>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlCountryDetails" class="col-form-label">Country: </label>
+                          <select class="form-control" id="ddlCountryAdd" name="countryid">
+                              <option>-SELECT-</option>
+                              <option th:each="country : ${countries}"
+                                      th:value="${country.id}"
+                                      th:text="${country.description}">
+                              </option>
+                          </select>
+                      </div>
+                      <div class="form-group">
+                          <label for="nameAdd" class="col-form-label">Description:</label>
+                          <input type="text" class="form-control" id="nameAdd" name="name" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="codeAdd" class="col-form-label">Code:</label>
+                          <input type="text" class="form-control" id="codeAdd" name="code" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="capitalAdd" class="col-form-label">Capital:</label>
+                          <input type="text" class="form-control" id="capitalAdd" name="capital" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="detailsEdit" class="col-form-label">Details:</label>
+                          <input type="text" class="form-control" id="detailsAdd" name="details">
+                      </div>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form th:action="@{/states/update}" method="put">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="editModalLabel">Edit State Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idEdit" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idEdit" name="id" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlCountryDetails" class="col-form-label">Country: </label>
+                          <select class="form-control" id="ddlCountryEdit" name="countryid">
+                              <option>-SELECT-</option>
+                              <option th:each="country : ${countries}"
+                                      th:value="${country.id}"
+                                      th:text="${country.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="nameEdit" class="col-form-label">Description:</label>
+                          <input type="text" class="form-control" id="nameEdit" name="name" required>
+                      </div>
+
+
+                      <div class="form-group">
+                          <label for="codeEdit" class="col-form-label">Code:</label>
+                          <input type="text" class="form-control" id="codeEdit" name="code" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="capitalEdit" class="col-form-label">Capital:</label>
+                          <input type="text" class="form-control" id="capitalEdit" name="capital" required>
+                      </div>
+
+
+                      <div class="form-group">
+                          <label for="detailsEdit" class="col-form-label">Details:</label>
+                          <input type="text" class="form-control" id="detailsEdit" name="details">
+                      </div>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form>
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="detailModalLabel">State Details</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idDetails" name="id" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="ddlCountryDetails" class="col-form-label">Country: </label>
+                          <select class="form-control" id="ddlCountryDetails" name="countryid">
+                              <option>-SELECT-</option>
+                              <option th:each="country : ${countries}"
+                                      th:value="${country.id}"
+                                      th:text="${country.description}">
+                              </option>
+                          </select>
+                      </div>
+
+                      <div class="form-group">
+                          <label class="col-form-label">Name:</label>
+                          <input type="text" class="form-control" id="nameDetails" name="name" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="codeDetails" class="col-form-label">Code:</label>
+                          <input type="text" class="form-control" id="codeDetails" name="code" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="capitalDetails" class="col-form-label">Capital:</label>
+                          <input type="text" class="form-control" id="capitalDetails" name="capital" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label class="col-form-label">Details:</label>
+                          <input type="text" class="form-control" id="detailsDetails" name="details" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label class="col-form-label">Last Updated By:</label>
+                          <input type="text" class="form-control" id="lastModifiedByDetails" name="lastModifiedBy" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label class="col-form-label">Last Updated On:</label>
+                          <input type="text" class="form-control" id="lastModifiedDateDetails" name="lastModifiedDate" readonly>
+                      </div>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal" tabindex="-1" role="dialog" id="deleteModal">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Confirm delete</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <p>Are you sure you want to delete this record?</p>
+              </div>
+              <div class="modal-footer">
+                  <a href="" class="btn btn-primary" id="delRef">Yes, Delete</a>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+      </div>
+  </div>
   <!-- javascripts -->
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -439,6 +677,7 @@
   <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="js/scripts.js"></script>
+  <script src="js/state.js"></script>
 
 
 </body>
